--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             </ul>
         </nav>
         <a class="contact" href="#contact"><button>Contact</button></a>
+
     </header>
     
     <section id="home">
         <h1>Home</h1>
-        <p>Hello! This is Deepak Sharma, a passionate calisthenics and home workout enthusiast with over five years of hands-on experience. My passion lies in helping people achieve their fitness goals without the need for expensive gym memberships or equipment. Here, you can explore my work, learn more about my background, and get in touch with me.</p>
+        <p>Hello! I am Deepak Sharma, a passionate calisthenics and home workout enthusiast with over five years of hands-on experience. My passion lies in helping people achieve their fitness goals without the need for expensive gym memberships or equipment. Here, you can explore my work, learn more about my background, and get in touch with me.</p>
     </section>
 
     <section id="about">
