--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="WhatsApp Image 2024-08-18 at 09.58.46_17889f20.jpg" alt="Profile Picture">
+        <img src="deepak.jpg">
     </div>
     
     <h1>DEEPAK SHARMA</h1>
