--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="deepak.jpg">
+        <img src="deepak1.jpg">
     </div>
     
     <h1>DEEPAK SHARMA</h1>
