--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="deepak1.jpg">
+        <img src="WhatsApp Image 2024-08-29 at 17.49.14_53953a41.jpg">
     </div>
     
     <h1>DEEPAK SHARMA</h1>
@@ -62,7 +62,7 @@
 
     <section class="social-media">
         <h2>Connect with Me</h2>
-        <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><img src="icon/icons8-facebook (1).svg" alt="Facebook"></a>
+        <a href="https://www.facebook.com/profile.php?id=61557710879300" target="_blank" aria-label="Facebook"><img src="icon/icons8-facebook (1).svg" alt="Facebook"></a>
         <a href="https://www.instagram.com/blac.kbodyradiation/" target="_blank" aria-label="Instagram"><img src="icon/icons8-instagram.svg" alt="Instagram"></a>
         <a href="https://www.linkedin.com/in/deepak-sharma-615212287/" target="_blank" aria-label="LinkedIn"><img src="icon/icons8-linkedin.svg" alt="LinkedIn"></a>
         <a href="https://wa.me/+923432527807" target="_blank" aria-label="WhatsApp"><img src="icon/icons8-whatsapp.svg" alt="WhatsApp"></a>
