--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="https://www.facebook.com/profile.php?id=61557710879300" target="_blank" aria-label="Facebook"><img src="icon/icons8-facebook (1).svg" alt="Facebook"></a>
         <a href="https://www.instagram.com/blac.kbodyradiation/" target="_blank" aria-label="Instagram"><img src="icon/icons8-instagram.svg" alt="Instagram"></a>
         <a href="https://www.linkedin.com/in/deepak-sharma-615212287/" target="_blank" aria-label="LinkedIn"><img src="icon/icons8-linkedin.svg" alt="LinkedIn"></a>
-        <a href="https://www.youtube.com/@DeepTech-r8w" target="_blank" aria-label="youtube"><img src="icon/icons8-youtube-24.png" alt="youtube"></a>
+        <a href="https://www.youtube.com/@DeepTech-r8w" target="_blank" aria-label="youtube"><img src="icon/icons8-youtube.svg" alt="youtube"></a>
         <a href="https://wa.me/+923432527807" target="_blank" aria-label="WhatsApp"><img src="icon/icons8-whatsapp.svg" alt="WhatsApp"></a>
     </section>
 
