--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#education">Education</a></li>
+                <li><a href="skills">Contact</a></li>
                 <li><a href="#contact">Contact</a></li>
+                
+
             </ul>
         </nav>
         <a class="contact" href="#contact"><button>Contact</button></a>
@@ -51,6 +54,10 @@
         </p>
         <p>
             <strong style="color:rgb(92, 92, 192);">Current Education:</strong> I am pursuing a degree in Computer Science at GC University Hyderabad. My education has provided me with a strong foundation in Python and web development skills.
+        </p>
+        <section id="skills">
+        <h1>skills</h1>
+        <p>HTML, CSS ,JS , python ,sql , GitHub for Version control
         </p>
         <h3>Certificates</h3>
         <ul class="certificates">
