--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="skills">Contact</a></li>
+                <li><a href="skills">skills</a></li>
                 <li><a href="#contact">Contact</a></li>
                 
 
