--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <section id="projects"> <!-- New Projects Section -->
-        <h2>Projects</h2>
+        <h3>Projects 1</h3>
         <div class="project-container">
             <div class="project">
                 <h3>scientific-calculator</h3>
@@ -83,6 +83,14 @@
                  <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted> </video>
                 </div>
                 <button><a href="https://deepaura.great-site.net" target="_blank">View Project</a></button>
+            </div>
+            <div class="project">
+                <h3>Project Title 3</h3>
+                <p>DeepTech online institution using html css js php and sql.</p>
+                <div class="project_video">
+                 <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted> </video>
+                </div>
+                <button><a href="https://deeptech12.infinityfreeapp.com" target="_blank">View Project</a></button>
             </div>
             <!-- Add more projects as needed -->
         </div>
