--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <h3>Project Title 3</h3>
                 <p>DeepTech online institution using html css js php and sql.</p>
                 <div class="project_video">
-                 <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted> </video>
+                 <video src="certificate/Screen Recording 2025-01-08 222039.mp4
+" controls muted> </video>
                 </div>
                 <button><a href="https://deeptech12.infinityfreeapp.com" target="_blank">View Project</a></button>
             </div>
