--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li> <!-- Added Projects link -->
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -64,32 +64,31 @@
     </section>
 
     <section id="projects"> <!-- New Projects Section -->
-        <h3>Projects 1</h3>
+        <h3>Projects</h3>
         <div class="project-container">
             <div class="project">
-                <h3>scientific-calculator</h3>
-                <p>My first project of scientific-calculator using html css j.s .</p>
+                <h3>Scientific Calculator</h3>
+                <p>My first project of scientific-calculator using HTML, CSS, and JS.</p>
                 <ul class="certificates">
                     <li>
                         <img src="certificates/Screenshot 2024-11-22 182325.png" alt="Certificate">
                     </li>
                 </ul>
-                <button><a href=" https://deepaksharma104.github.io/scientific-calculator/" target="_blank">View Project</a></button>
+                <button><a href="https://deepaksharma104.github.io/scientific-calculator/" target="_blank">View Project</a></button>
             </div>
             <div class="project">
                 <h3>Project Title 2</h3>
-                <p>online jewellery shop using html css js php and mysql.</p>
+                <p>Online jewellery shop using HTML, CSS, JS, PHP, and MySQL.</p>
                 <div class="project_video">
-                 <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted> </video>
+                    <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted></video>
                 </div>
                 <button><a href="https://deepaura.great-site.net" target="_blank">View Project</a></button>
             </div>
             <div class="project">
                 <h3>Project Title 3</h3>
-                <p>DeepTech online institution using html css js php and sql.</p>
+                <p>DeepTech online institution using HTML, CSS, JS, PHP, and SQL.</p>
                 <div class="project_video">
-                 <video src="certificates/Screen Recording 2025-01-08 222039.mp4
-" controls muted> </video>
+                    <video src="certificates/Screen Recording 2025-01-08 222039.mp4" controls muted></video>
                 </div>
                 <button><a href="https://deeptech12.infinityfreeapp.com" target="_blank">View Project</a></button>
             </div>
@@ -97,9 +96,16 @@
         </div>
     </section>
 
+    <section id="download-cv"> <!-- New Download CV Section -->
+        <h2>Download My CV</h2>
+        <a href="files/my_cv.pdf" download>
+            <button>Download CV</button>
+        </a>
+    </section>
+
     <section class="social-media">
         <h2>Connect with Me</h2>
-        <a href="https://www.facebook.com/profile.php?id=61557710879300" target="_blank" aria-label="Facebook "><img src="icon/icons8-facebook (1).svg" alt="Facebook"></a>
+        <a href="https://www.facebook.com/profile.php?id=61557710879300" target="_blank" aria-label="Facebook"><img src="icon/icons8-facebook (1).svg" alt="Facebook"></a>
         <a href="https://www.instagram.com/blac.kbodyradiation/" target="_blank" aria-label="Instagram"><img src="icon/icons8-instagram.svg" alt="Instagram"></a>
         <a href="https://www.linkedin.com/in/deepak-sharma-615212287/" target="_blank" aria-label="LinkedIn"><img src="icon/icons8-linkedin.svg" alt="LinkedIn"></a>
         <a href="https://www.youtube.com/@DeepTech-r8w" target="_blank" aria-label="YouTube"><img src="icon/icons8-youtube.svg" alt="YouTube"></a>
