--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
+    <style>
+        /* Style for the Download CV button */
+        #download-cv button {
+            background-color: #4CAF50; /* Green background */
+            border: none; /* No border */
+            color: white; /* White text */
+            padding: 15px 32px; /* Padding for the button */
+            text-align: center; /* Center the text */
+            text-decoration: none; /* No underline */
+            display: inline-block; /* Inline block for button */
+            font-size: 16px; /* Font size */
+            margin: 4px 2px; /* Margin around the button */
+            cursor: pointer; /* Pointer cursor on hover */
+            border-radius: 4px; /* Rounded corners */
+            transition: background-color 0.3s; /* Smooth transition for hover effect */
+        }
+
+        #download-cv button:hover {
+            background-color: #45a049; /* Darker green on hover */
+        }
+    </style>
 <body>
     <div class="image-container">
         <img src="WhatsApp Image 2024-08-29 at 17.49.14_53953a41.jpg">
