--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
    <section id="download-cv"> <!-- New Download CV Section -->
     <h2>Download My CV</h2>
-    <a href="files/my_cv.pdf" download>
+    <a href="certificates/DEEPAK SHARMA.pdf" download>
         <button>Download CV</button>
     </a>
 </section>
