--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                 <button><a href="https://deepaksharma104.github.io/scientific-calculator/" target="_blank">View Project</a></button>
             </div>
             <div class="project">
-                <h3>Project Title 2</h3>
+                <h3>Project 2</h3>
                 <p>Online jewellery shop using HTML, CSS, JS, PHP, and MySQL.</p>
                 <div class="project_video">
-                    <video src="video/Screen Recording 2024-11-22 181103.mp4" controls muted></video>
+                    <video src="certificates//Screen Recording 2025-01-09 122024" controls muted></video>
                 </div>
                 <button><a href="https://deepaura.great-site.net" target="_blank">View Project</a></button>
             </div>
             <div class="project">
-                <h3>Project Title 3</h3>
+                <h3>Project  3</h3>
                 <p>DeepTech online institution using HTML, CSS, JS, PHP, and SQL.</p>
                 <div class="project_video">
                     <video src="certificates/Screen Recording 2025-01-08 222039.mp4" controls muted></video>
