--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h3>Project  3</h3>
                 <p>DeepTech online institution using HTML, CSS, JS, PHP, and SQL.</p>
                 <div class="project_video">
-                    <video src="certificates/Screen Recording 2025-01-08 222039.mp4" controls muted></video>
+                    <video src="certificates/jew.mp4" controls muted></video>
                 </div>
                 <button><a href="https://deeptech12.infinityfreeapp.com" target="_blank">View Project</a></button>
             </div>
