--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     
     <h1>DEEPAK SHARMA</h1>
-    <h2 class= :auto-type;></h2>
+    <h2 class= "auto-type"></h2>
 
     <header>
         <nav class="navbar">
